--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ markdown: kramdown
 plugins:
   - jekyll-feed
 
+remote_theme: pages-themes/minimal
 
 # Exclude from processing.
 # The following items will not be processed, by default.
